tests/ui/impl-trait/alias-liveness/tait-hidden-erased-unsoundness.stderr
error[E0700]: hidden type for `Tait<'a>` captures lifetime that does not appear in bounds
  --> $DIR/tait-hidden-erased-unsoundness.rs:18:5
   |
LL | type Tait<'a> = impl Sized + 'a;
   |                 --------------- opaque type defined here
LL | #[defines(Tait)]
LL | fn step2<'a, 'b: 'a>() -> Tait<'a> {
   |              -- hidden type `impl Captures<'b> + 'a` captures the lifetime `'b` as defined here
LL |     step1::<'a, 'b>()
   |     ^^^^^^^^^^^^^^^^^

error: cannot check whether the hidden type of `tait_hidden_erased_unsoundness[87ee]::Tait::{opaque#0}` satisfies auto traits
  --> $DIR/tait-hidden-erased-unsoundness.rs:22:27
   |
LL | fn step3<'a, 'b: 'a>() -> impl Send + 'a {
   |                           ^^^^^^^^^^^^^^
LL |
LL |     step2::<'a, 'b>()
   |     ----------------- return type was inferred to be `Tait<'_>` here
   |
   = note: fetching the hidden types of an opaque inside of the defining scope is not supported. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
note: opaque type is declared here
  --> $DIR/tait-hidden-erased-unsoundness.rs:15:17
   |
LL | type Tait<'a> = impl Sized + 'a;
   |                 ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0700`.
